--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link type="text/css" href="styles/footer.css" rel="stylesheet" />
     <link type="text/css" href="styles/search_input.css" rel="stylesheet" />
     <link type="text/css" href="styles/item_block.css" rel="stylesheet" />
+    <link type="text/css" href="styles/market_block.css" rel="stylesheet" />
 </head>
 <body>
 
@@ -23,12 +24,7 @@
 
     <div class="ui-top-menu">
         <div class="ui-top-menu-logo"></div>
-        <!--<div class="ui-top-menu-middle">
-            <div class="ui-top-menu-city">
-                <div class="ui-top-menu-city-name"></div>
-                <div class="ui-top-menu-city-select"></div>
-            </div>
-        </div>-->
+
         <div class="ui-top-menu-right">
             <div class="ui-top-menu-sign">Войти</div>
             <div class="ui-top-menu-cart">
@@ -40,83 +36,163 @@
         </div>
     </div>
     <div class="ui-common">
-        <div class="ui-header">
-
-            <div class="ui-dymmy ui-spacer"></div>
-
-            <div class="ui-dymmy ui-header-tg">
-                <div class="ui-title">
-                    <div class="ui-tagline-first">
-                        <span class="ui-tagline-text">Выбрать </span>
-                        <span class="ui-tagline-uniq">уникальный</span>
-                    </div>
-                    <div class="ui-tagline-second">
-                        <span class="ui-tagline-text">подарок стало очень просто</span>
-                    </div>
-                </div>
-                <div class="ui-gender">
-                    <div class="ui-gender-male-selected">
-                        <div class="ui-gender-male-icon"></div>
-                        <div class="ui-gender-male-text">мужчине</div>
-                    </div>
-                    <div class="ui-gender-female">
-                        <div class="ui-gender-female-icon"></div>
-                        <div class="ui-gender-female-text">девушке</div>
-                    </div>
-                </div>
-            </div>
-            <div class="ui-dymmy" style="height: 30px;"></div>
-            <div class="ui-search">
-                <div class="ui-search-input-lay">
-                    <input id="tag1" name="" type="text" class="taginput" size=80 />
-                </div>
-                <div class="ui-search-button-lay">
-                    <div class="ui-header-search-button">Найти лучшие подарки</div>
-                </div>
-            </div>
-        </div>
         <div class="ui-content">
+            <div class="ui-dymmy" style="height: 120px;"></div>
+
+            <div class="ui-module-container">
+                <div class="ui-module ui-module-filter">
+                    <div class="ui-dymmy ui-header-tg">
+                        <div class="ui-title">
+                            <div class="ui-tagline-first">
+                                <span class="ui-tagline-text">Выбрать </span>
+                                <span class="ui-tagline-uniq">уникальный</span>
+                            </div>
+                            <div class="ui-tagline-second">
+                                <span class="ui-tagline-text">подарок стало очень просто</span>
+                            </div>
+                        </div>
+                        <div class="ui-gender">
+                            <div class="ui-gender-male-selected">
+                                <div class="ui-gender-male-icon"></div>
+                                <div class="ui-gender-male-text">мужчине</div>
+                            </div>
+                            <div class="ui-gender-female">
+                                <div class="ui-gender-female-icon"></div>
+                                <div class="ui-gender-female-text">девушке</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="ui-dymmy" style="height: 30px;"></div>
+
+            <div class="ui-module-container">
+                <div class="ui-module ui-module-search">
+                    <div class="ui-search">
+                        <div class="ui-search-input-lay">
+                            <input id="tag1" name="" type="text" class="taginput" size=80 />
+                        </div>
+                        <div class="ui-search-button-lay">
+                            <div class="ui-header-search-button">Найти лучшие подарки</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
             <div class="ui-dymmy" style="height:150px;"></div>
-
-
-            <div class="ui-module ui-module-most-popular">
-                <div class="ui-item-block ui-item-block-big"></div>
-                <div class="ui-item-block"></div>
-                <div class="ui-item-block"></div>
+            <div class="ui-module-container">
+                <div class="ui-module ui-module-most-popular">
+                    <div class="ui-item-block ui-item-block-big"></div>
+                    <div class="ui-item-block"></div>
+                    <div class="ui-item-block"></div>
+                </div>
             </div>
 
             <div class="ui-dymmy" style="height:50px;"></div>
 
-            <div class="ui-module ui-module-recommendation">
-                <div class="ui-recommendation-filter">
+            <div class="ui-module-container">
+                <div class="ui-module ui-module-recommendation">
+                    <div class="ui-recommendation-filter">
 
+                    </div>
+                    <div class="ui-recommendation-items">
+                        <div class="ui-item-block"></div>
+                        <div class="ui-item-block"></div>
+                        <div class="ui-item-block"></div>
+                        <div class="ui-item-block"></div>
+
+                        <div class="ui-item-block"></div>
+                        <div class="ui-item-block"></div>
+                        <div class="ui-item-block"></div>
+                        <div class="ui-item-block"></div>
+                    </div>
+
+                    <div class="ui-dymmy" style="height:20px;"></div>
+                    <div class="ui-recommendation-button-lay">
+                        <div class="ui-centerer">
+                            <div class="ui-big-button ui-big-button-icon">Загрузить еще</div>
+                        </div>
+                    </div>
                 </div>
-                <div class="ui-recommendation-items">
-                    <div class="ui-item-block"></div>
-                    <div class="ui-item-block"></div>
-                    <div class="ui-item-block"></div>
-                    <div class="ui-item-block"></div>
+            </div>
 
-                    <div class="ui-item-block"></div>
-                    <div class="ui-item-block"></div>
-                    <div class="ui-item-block"></div>
-                    <div class="ui-item-block"></div>
+            <div class="ui-dymmy" style="height:40px;"></div>
+            <div class="ui-module-container ui-module-scroll-items-background">
+                <div class="ui-dymmy" style="height:20px;"></div>
+                <div class="ui-module ui-module-scroll-items">
+                    <div class="ui-module-title">Самые просматриваемые</div>
+                    <div class="ui-recommendation-items">
+                        <div class="ui-item-block"></div>
+                        <div class="ui-item-block"></div>
+                        <div class="ui-item-block"></div>
+                        <div class="ui-item-block"></div>
+                    </div>
+
+                    <div class="ui-dymmy" style="height:20px;"></div>
+                    <div class="ui-recommendation-button-lay">
+                        <div class="ui-centerer">
+                            <div class="ui-big-button ui-big-button-icon">Смотреть все</div>
+                        </div>
+                    </div>
                 </div>
+                <div class="ui-dymmy" style="height:40px;"></div>
+            </div>
 
-                <div class="ui-recommendation-button-lay">
-                    <div class="ui-big-button">Загрузить еще</div>
+            <div class="ui-module-container ui-module-advert-background">
+                <div class="ui-module ui-module-advert ">
+
                 </div>
             </div>
 
 
+            <div class="ui-module-container">
+                <div class="ui-dymmy" style="height:40px;"></div>
+
+                <div class="ui-module ui-module-best-markets">
+                    <div class="ui-module-title">Лучшие магазины недели</div>
+
+                    <div class="ui-markets">
+                        <div class="ui-item-market-block"></div>
+                        <div class="ui-item-market-block"></div>
+                        <div class="ui-item-market-block"></div>
+                    </div>
+                </div>
+                <div class="ui-dymmy" style="height:40px;"></div>
+            </div>
+
+
+            <div class="ui-module-container ui-module-attention-background">
+                <div class="ui-dymmy" style="height:40px;"></div>
+                <div class="ui-module ui-module-attention-items">
+                    <div class="ui-module-title">Важно знать</div>
+                    <div class="ui-recommendation-items">
+                        <div class="ui-item-block"></div>
+                        <div class="ui-item-block"></div>
+                        <div class="ui-item-block"></div>
+                        <div class="ui-item-block"></div>
+                    </div>
+
+                    <div class="ui-dymmy" style="height:20px;"></div>
+                    <div class="ui-recommendation-button-lay">
+                        <div class="ui-centerer">
+                            <div class="ui-big-button ui-big-button-icon">Загрузить еще</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="ui-dymmy" style="height:40px;"></div>
+            </div>
         </div>
-        <div class="ui-footer">
+    </div>
+
+    <div class="ui-footer">
+        <div class="ui-dymmy" style="height:20px;"></div>
+        <div class="ui-footer-content">
             <div class="ui-footer-menu">
-                <div class="ui-footer-menu-item"></div>
-                <div class="ui-footer-menu-item"></div>
+                <div class="ui-footer-menu-item">Блог</div>
+                <div class="ui-footer-menu-item">О проекте</div>
             </div>
-            <div class="ui-footer-copyright"></div>
+            <div class="ui-footer-copyright">twigger | сервис по подбору подарков</div>
         </div>
     </div>
 
