добавлен каркас для блоков и база для запросов на сервер

--- a/index.html
+++ b/index.html
@@ -96,16 +96,282 @@
                     <div class="ui-recommendation-filter">
 
                     </div>
+                    <div class="ui-module-title">Вам могут понравиться</div>
                     <div class="ui-recommendation-items">
-                        <div class="ui-item-block"></div>
-                        <div class="ui-item-block"></div>
-                        <div class="ui-item-block"></div>
-                        <div class="ui-item-block"></div>
 
-                        <div class="ui-item-block"></div>
-                        <div class="ui-item-block"></div>
-                        <div class="ui-item-block"></div>
-                        <div class="ui-item-block"></div>
+                        <div class="ui-item-block">
+                            <div class="ui-item-level-first">
+                                <div class="ui-item-icon">
+                                    <img class="ui-item-icon-img" height="150" src="http://api.twiger.mcdir.ru/project/storage/img/product/0/1/mainImg.jpg">
+                                </div>
+                                <div class="ui-item-title">
+                                    <div class="ui-item-title-text gf-cb">SAMSUNG Galaxy S8+ 64Gb</div>
+                                    <div class="ui-dymmy" style="height:5px;"></div>
+                                    <div class="ui-item-title-text gf-cb">
+                                        <span class="ui-item-title-price-amount">1500</span>
+                                        <span class="ui-item-title-price-currency">₽</span>
+                                    </div>
+                                </div>
+
+                                <div class="ui-item-interactive g-bs">
+                                    <div class="ui-item-interactive-item g-fl g-bs">
+                                        <div class="ui-ib-icon ui-ib-icon-rating g-fl g-bs"></div>
+                                        <div class="ui-ib-count g-fr g-bs gf-cb">4.5</div>
+                                    </div>
+                                    <div class="ui-item-interactive-item g-fr g-bs">
+                                        <div class="ui-ib-icon ui-ib-icon-comments g-fl g-bs"></div>
+                                        <div class="ui-ib-count g-fr g-bs">394</div>
+                                    </div>
+                                    <div class="ui-item-interactive-item g-fr g-bs">
+                                        <div class="ui-ib-icon ui-ib-icon-likes g-fl g-bs"></div>
+                                        <div class="ui-ib-count g-fr g-bs">95</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="ui-item-level-second">
+                                <div class="ui-item-sale g-bs g-fl gf-cr">Скидка 25%</div>
+                                <div class="ui-item-like g-fr"></div>
+                            </div>
+                        </div>
+                        <div class="ui-item-block">
+                            <div class="ui-item-level-first">
+                                <div class="ui-item-icon">
+                                    <img class="ui-item-icon-img" height="150" src="http://api.twiger.mcdir.ru/project/storage/img/product/0/1/mainImg.jpg">
+                                </div>
+                                <div class="ui-item-title">
+                                    <div class="ui-item-title-text gf-cb">SAMSUNG Galaxy S8+ 64Gb</div>
+                                    <div class="ui-dymmy" style="height:5px;"></div>
+                                    <div class="ui-item-title-text gf-cb">
+                                        <span class="ui-item-title-price-amount">1500</span>
+                                        <span class="ui-item-title-price-currency">₽</span>
+                                    </div>
+                                </div>
+
+                                <div class="ui-item-interactive g-bs">
+                                    <div class="ui-item-interactive-item g-fl g-bs">
+                                        <div class="ui-ib-icon ui-ib-icon-rating g-fl g-bs"></div>
+                                        <div class="ui-ib-count g-fr g-bs gf-cb">4.5</div>
+                                    </div>
+                                    <div class="ui-item-interactive-item g-fr g-bs">
+                                        <div class="ui-ib-icon ui-ib-icon-comments g-fl g-bs"></div>
+                                        <div class="ui-ib-count g-fr g-bs">394</div>
+                                    </div>
+                                    <div class="ui-item-interactive-item g-fr g-bs">
+                                        <div class="ui-ib-icon ui-ib-icon-likes g-fl g-bs"></div>
+                                        <div class="ui-ib-count g-fr g-bs">95</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="ui-item-level-second">
+                                <div class="ui-item-sale g-bs g-fl gf-cr">Скидка 25%</div>
+                                <div class="ui-item-like g-fr"></div>
+                            </div>
+                        </div>
+                        <div class="ui-item-block">
+                            <div class="ui-item-level-first">
+                                <div class="ui-item-icon">
+                                    <img class="ui-item-icon-img" height="150" src="http://api.twiger.mcdir.ru/project/storage/img/product/0/1/mainImg.jpg">
+                                </div>
+                                <div class="ui-item-title">
+                                    <div class="ui-item-title-text gf-cb">SAMSUNG Galaxy S8+ 64Gb</div>
+                                    <div class="ui-dymmy" style="height:5px;"></div>
+                                    <div class="ui-item-title-text gf-cb">
+                                        <span class="ui-item-title-price-amount">1500</span>
+                                        <span class="ui-item-title-price-currency">₽</span>
+                                    </div>
+                                </div>
+
+                                <div class="ui-item-interactive g-bs">
+                                    <div class="ui-item-interactive-item g-fl g-bs">
+                                        <div class="ui-ib-icon ui-ib-icon-rating g-fl g-bs"></div>
+                                        <div class="ui-ib-count g-fr g-bs gf-cb">4.5</div>
+                                    </div>
+                                    <div class="ui-item-interactive-item g-fr g-bs">
+                                        <div class="ui-ib-icon ui-ib-icon-comments g-fl g-bs"></div>
+                                        <div class="ui-ib-count g-fr g-bs">394</div>
+                                    </div>
+                                    <div class="ui-item-interactive-item g-fr g-bs">
+                                        <div class="ui-ib-icon ui-ib-icon-likes g-fl g-bs"></div>
+                                        <div class="ui-ib-count g-fr g-bs">95</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="ui-item-level-second">
+                                <div class="ui-item-sale g-bs g-fl gf-cr">Скидка 25%</div>
+                                <div class="ui-item-like g-fr"></div>
+                            </div>
+                        </div>
+                        <div class="ui-item-block">
+                            <div class="ui-item-level-first">
+                                <div class="ui-item-icon">
+                                    <img class="ui-item-icon-img" height="150" src="http://api.twiger.mcdir.ru/project/storage/img/product/0/1/mainImg.jpg">
+                                </div>
+                                <div class="ui-item-title">
+                                    <div class="ui-item-title-text gf-cb">SAMSUNG Galaxy S8+ 64Gb</div>
+                                    <div class="ui-dymmy" style="height:5px;"></div>
+                                    <div class="ui-item-title-text gf-cb">
+                                        <span class="ui-item-title-price-amount">1500</span>
+                                        <span class="ui-item-title-price-currency">₽</span>
+                                    </div>
+                                </div>
+
+                                <div class="ui-item-interactive g-bs">
+                                    <div class="ui-item-interactive-item g-fl g-bs">
+                                        <div class="ui-ib-icon ui-ib-icon-rating g-fl g-bs"></div>
+                                        <div class="ui-ib-count g-fr g-bs gf-cb">4.5</div>
+                                    </div>
+                                    <div class="ui-item-interactive-item g-fr g-bs">
+                                        <div class="ui-ib-icon ui-ib-icon-comments g-fl g-bs"></div>
+                                        <div class="ui-ib-count g-fr g-bs">394</div>
+                                    </div>
+                                    <div class="ui-item-interactive-item g-fr g-bs">
+                                        <div class="ui-ib-icon ui-ib-icon-likes g-fl g-bs"></div>
+                                        <div class="ui-ib-count g-fr g-bs">95</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="ui-item-level-second">
+                                <div class="ui-item-sale g-bs g-fl gf-cr">Скидка 25%</div>
+                                <div class="ui-item-like g-fr"></div>
+                            </div>
+                        </div>
+
+                        <div class="ui-item-block">
+                            <div class="ui-item-level-first">
+                                <div class="ui-item-icon">
+                                    <img class="ui-item-icon-img" height="150" src="http://api.twiger.mcdir.ru/project/storage/img/product/0/1/mainImg.jpg">
+                                </div>
+                                <div class="ui-item-title">
+                                    <div class="ui-item-title-text gf-cb">SAMSUNG Galaxy S8+ 64Gb</div>
+                                    <div class="ui-dymmy" style="height:5px;"></div>
+                                    <div class="ui-item-title-text gf-cb">
+                                        <span class="ui-item-title-price-amount">1500</span>
+                                        <span class="ui-item-title-price-currency">₽</span>
+                                    </div>
+                                </div>
+
+                                <div class="ui-item-interactive g-bs">
+                                    <div class="ui-item-interactive-item g-fl g-bs">
+                                        <div class="ui-ib-icon ui-ib-icon-rating g-fl g-bs"></div>
+                                        <div class="ui-ib-count g-fr g-bs gf-cb">4.5</div>
+                                    </div>
+                                    <div class="ui-item-interactive-item g-fr g-bs">
+                                        <div class="ui-ib-icon ui-ib-icon-comments g-fl g-bs"></div>
+                                        <div class="ui-ib-count g-fr g-bs">394</div>
+                                    </div>
+                                    <div class="ui-item-interactive-item g-fr g-bs">
+                                        <div class="ui-ib-icon ui-ib-icon-likes g-fl g-bs"></div>
+                                        <div class="ui-ib-count g-fr g-bs">95</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="ui-item-level-second">
+                                <div class="ui-item-sale g-bs g-fl gf-cr">Скидка 25%</div>
+                                <div class="ui-item-like g-fr"></div>
+                            </div>
+                        </div>
+                        <div class="ui-item-block">
+                            <div class="ui-item-level-first">
+                                <div class="ui-item-icon">
+                                    <img class="ui-item-icon-img" height="150" src="http://api.twiger.mcdir.ru/project/storage/img/product/0/1/mainImg.jpg">
+                                </div>
+                                <div class="ui-item-title">
+                                    <div class="ui-item-title-text gf-cb">SAMSUNG Galaxy S8+ 64Gb</div>
+                                    <div class="ui-dymmy" style="height:5px;"></div>
+                                    <div class="ui-item-title-text gf-cb">
+                                        <span class="ui-item-title-price-amount">1500</span>
+                                        <span class="ui-item-title-price-currency">₽</span>
+                                    </div>
+                                </div>
+
+                                <div class="ui-item-interactive g-bs">
+                                    <div class="ui-item-interactive-item g-fl g-bs">
+                                        <div class="ui-ib-icon ui-ib-icon-rating g-fl g-bs"></div>
+                                        <div class="ui-ib-count g-fr g-bs gf-cb">4.5</div>
+                                    </div>
+                                    <div class="ui-item-interactive-item g-fr g-bs">
+                                        <div class="ui-ib-icon ui-ib-icon-comments g-fl g-bs"></div>
+                                        <div class="ui-ib-count g-fr g-bs">394</div>
+                                    </div>
+                                    <div class="ui-item-interactive-item g-fr g-bs">
+                                        <div class="ui-ib-icon ui-ib-icon-likes g-fl g-bs"></div>
+                                        <div class="ui-ib-count g-fr g-bs">95</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="ui-item-level-second">
+                                <div class="ui-item-sale g-bs g-fl gf-cr">Скидка 25%</div>
+                                <div class="ui-item-like g-fr"></div>
+                            </div>
+                        </div>
+                        <div class="ui-item-block">
+                            <div class="ui-item-level-first">
+                                <div class="ui-item-icon">
+                                    <img class="ui-item-icon-img" height="150" src="http://api.twiger.mcdir.ru/project/storage/img/product/0/1/mainImg.jpg">
+                                </div>
+                                <div class="ui-item-title">
+                                    <div class="ui-item-title-text gf-cb">SAMSUNG Galaxy S8+ 64Gb</div>
+                                    <div class="ui-dymmy" style="height:5px;"></div>
+                                    <div class="ui-item-title-text gf-cb">
+                                        <span class="ui-item-title-price-amount">1500</span>
+                                        <span class="ui-item-title-price-currency">₽</span>
+                                    </div>
+                                </div>
+
+                                <div class="ui-item-interactive g-bs">
+                                    <div class="ui-item-interactive-item g-fl g-bs">
+                                        <div class="ui-ib-icon ui-ib-icon-rating g-fl g-bs"></div>
+                                        <div class="ui-ib-count g-fr g-bs gf-cb">4.5</div>
+                                    </div>
+                                    <div class="ui-item-interactive-item g-fr g-bs">
+                                        <div class="ui-ib-icon ui-ib-icon-comments g-fl g-bs"></div>
+                                        <div class="ui-ib-count g-fr g-bs">394</div>
+                                    </div>
+                                    <div class="ui-item-interactive-item g-fr g-bs">
+                                        <div class="ui-ib-icon ui-ib-icon-likes g-fl g-bs"></div>
+                                        <div class="ui-ib-count g-fr g-bs">95</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="ui-item-level-second">
+                                <div class="ui-item-sale g-bs g-fl gf-cr">Скидка 25%</div>
+                                <div class="ui-item-like g-fr"></div>
+                            </div>
+                        </div>
+                        <div class="ui-item-block">
+                            <div class="ui-item-level-first">
+                                <div class="ui-item-icon">
+                                    <img class="ui-item-icon-img" height="150" src="http://api.twiger.mcdir.ru/project/storage/img/product/0/1/mainImg.jpg">
+                                </div>
+                                <div class="ui-item-title">
+                                    <div class="ui-item-title-text gf-cb">SAMSUNG Galaxy S8+ 64Gb</div>
+                                    <div class="ui-dymmy" style="height:5px;"></div>
+                                    <div class="ui-item-title-text gf-cb">
+                                        <span class="ui-item-title-price-amount">1500</span>
+                                        <span class="ui-item-title-price-currency">₽</span>
+                                    </div>
+                                </div>
+
+                                <div class="ui-item-interactive g-bs">
+                                    <div class="ui-item-interactive-item g-fl g-bs">
+                                        <div class="ui-ib-icon ui-ib-icon-rating g-fl g-bs"></div>
+                                        <div class="ui-ib-count g-fr g-bs gf-cb">4.5</div>
+                                    </div>
+                                    <div class="ui-item-interactive-item g-fr g-bs">
+                                        <div class="ui-ib-icon ui-ib-icon-comments g-fl g-bs"></div>
+                                        <div class="ui-ib-count g-fr g-bs">394</div>
+                                    </div>
+                                    <div class="ui-item-interactive-item g-fr g-bs">
+                                        <div class="ui-ib-icon ui-ib-icon-likes g-fl g-bs"></div>
+                                        <div class="ui-ib-count g-fr g-bs">95</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="ui-item-level-second">
+                                <div class="ui-item-sale g-bs g-fl gf-cr">Скидка 25%</div>
+                                <div class="ui-item-like g-fr"></div>
+                            </div>
+                        </div>
                     </div>
 
                     <div class="ui-dymmy" style="height:20px;"></div>
