добавлен рекламный блок

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <link type="text/css" href="styles/search_input.css" rel="stylesheet" />
     <link type="text/css" href="styles/item_block.css" rel="stylesheet" />
     <link type="text/css" href="styles/market_block.css" rel="stylesheet" />
+    <link type="text/css" href="styles/ad_block.css" rel="stylesheet" />
+
 </head>
 <body>
 
@@ -90,87 +92,17 @@
             </div>
 
             <div class="ui-dymmy" style="height:50px;"></div>
+            <div class="ui-module-container" id="module-recommendation-items" >
 
-            <div class="ui-module-container"  id="module-recommendation-items" >
-                <!--<div class="ui-module ui-module-recommendation">
-                    <div class="ui-recommendation-filter">
-
-                    </div>
-                    <div class="ui-module-title">Вам могут понравиться</div>
-                    <div class="ui-recommendation-items">
-
-                        <div class="ui-item-block">
-                            <div class="ui-item-level-first">
-                                <div class="ui-item-icon">
-                                    <img class="ui-item-icon-img" height="150" src="http://api.twiger.mcdir.ru/project/storage/img/product/0/1/mainImg.jpg">
-                                </div>
-                                <div class="ui-item-title">
-                                    <div class="ui-item-title-text gf-cb">SAMSUNG Galaxy S8+ 64Gb</div>
-                                    <div class="ui-dymmy" style="height:5px;"></div>
-                                    <div class="ui-item-title-text gf-cb">
-                                        <span class="ui-item-title-price-amount">1500</span>
-                                        <span class="ui-item-title-price-currency">₽</span>
-                                    </div>
-                                </div>
-
-                                <div class="ui-item-interactive g-bs">
-                                    <div class="ui-item-interactive-item g-fl g-bs">
-                                        <div class="ui-ib-icon ui-ib-icon-rating g-fl g-bs"></div>
-                                        <div class="ui-ib-count g-fr g-bs gf-cb">4.5</div>
-                                    </div>
-                                    <div class="ui-item-interactive-item g-fr g-bs">
-                                        <div class="ui-ib-icon ui-ib-icon-comments g-fl g-bs"></div>
-                                        <div class="ui-ib-count g-fr g-bs">394</div>
-                                    </div>
-                                    <div class="ui-item-interactive-item g-fr g-bs">
-                                        <div class="ui-ib-icon ui-ib-icon-likes g-fl g-bs"></div>
-                                        <div class="ui-ib-count g-fr g-bs">95</div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="ui-item-level-second">
-                                <div class="ui-item-sale g-bs g-fl gf-cr">Скидка 25%</div>
-                                <div class="ui-item-like g-fr"></div>
-                            </div>
-                        </div>
-
-                    </div>
-
-                    <div class="ui-dymmy" style="height:20px;"></div>
-                    <div class="ui-recommendation-button-lay">
-                        <div class="ui-centerer">
-                            <div class="ui-big-button ui-big-button-icon">Загрузить еще</div>
-                        </div>
-                    </div>
-                </div>-->
             </div>
 
             <div class="ui-dymmy" style="height:40px;"></div>
-            <div class="ui-module-container ui-module-scroll-items-background">
-                <div class="ui-dymmy" style="height:20px;"></div>
-                <div class="ui-module ui-module-scroll-items">
-                    <div class="ui-module-title">Самые просматриваемые</div>
-                    <div class="ui-recommendation-items">
-                        <div class="ui-item-block"></div>
-                        <div class="ui-item-block"></div>
-                        <div class="ui-item-block"></div>
-                        <div class="ui-item-block"></div>
-                    </div>
+            <div class="ui-module-container ui-module-scroll-items-background" id="module-most-views">
 
-                    <div class="ui-dymmy" style="height:20px;"></div>
-                    <div class="ui-recommendation-button-lay">
-                        <div class="ui-centerer">
-                            <div class="ui-big-button ui-big-button-icon">Смотреть все</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="ui-dymmy" style="height:40px;"></div>
             </div>
 
-            <div class="ui-module-container ui-module-advert-background">
-                <div class="ui-module ui-module-advert ">
+            <div class="ui-module-container ui-module-advert-background" id="module-ad-block">
 
-                </div>
             </div>
 
 
